--- a/package.json
+++ b/package.json
@@ -3,20 +3,19 @@
 	"version": "0.0.1",
 	"description": "Industry Planner - production tool for Influence",
 	"main": "./src/test.ts",
-    "type": "module",
+	"type": "module",
 	"scripts": {
-		"dev": "gulp watch",
-		"build": "gulp build"
+		"build": "vite build",
+		"watch": "vite"
 	},
 	"author": "@elerium115",
 	"license": "ISC",
+	"dependencies": {
+		"axios": "^1.7.7"
+	},
 	"devDependencies": {
-		"del": "^7.1.0",
-		"gulp": "^5.0.0",
-		"gulp-sass": "^5.1.0",
-		"gulp-sourcemaps": "^3.0.0",
-		"gulp-typescript": "^6.0.0-alpha.1",
-		"sass": "^1.78.0",
-		"typescript": "^5.6.2"
+		"glob": "^11.0.0",
+		"sass-embedded": "^1.78.0",
+		"vite": "^5.4.5"
 	}
 }
