--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
 	"author": "@elerium115",
 	"license": "ISC",
 	"dependencies": {
+		"@influenceth/sdk": "^2.3.4",
 		"axios": "^1.7.7"
 	},
 	"devDependencies": {
 		"glob": "^11.0.0",
 		"sass-embedded": "^1.78.0",
-		"vite": "^5.4.5"
+		"vite": "^5.4.5",
+		"vite-plugin-node-polyfills": "^0.22.0"
 	}
 }
