--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"glob": "^11.0.0",
 		"sass-embedded": "^1.78.0",
 		"vite": "^5.4.5",
-		"vite-plugin-node-polyfills": "^0.22.0"
+		"vite-plugin-node-polyfills": "^0.22.0",
+		"vite-plugin-static-copy": "^2.0.0"
 	}
 }
