--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
 	"author": "@elerium115",
 	"license": "ISC",
 	"dependencies": {
-		"@influenceth/sdk": "^2.3.4",
+		"@influenceth/sdk": "^2.3.5",
 		"axios": "^1.7.7",
-		"get-starknet": "^3.3.3"
+		"starknetkit": "^2.3.3"
 	},
 	"devDependencies": {
 		"glob": "^11.0.0",
-		"sass-embedded": "^1.78.0",
-		"vite": "^5.4.5",
+		"sass-embedded": "^1.80.4",
+		"vite": "^5.4.10",
 		"vite-plugin-node-polyfills": "^0.22.0",
 		"vite-plugin-static-copy": "^2.0.0"
 	}
