--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
 	"dependencies": {
 		"@influenceth/sdk": "^2.3.5",
 		"axios": "^1.7.7",
+		"jose": "^5.9.6",
 		"starknetkit": "^2.3.3"
 	},
 	"devDependencies": {
